[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "dilrong",email = "dilrong@dilrong.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-core (>=2.29.0,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "ccxt (>=4.4.60,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.34.0"
black = "^25.1.0"
flake8 = "^7.1.2"
pytest-mock = "^3.14.0"
pytest = "^8.3.4"

